TAG: radardbutilities-5-1-4-4
TAG: radardbutilities-5-1-4-3
DATE: 08/20/2013
STAFF: dbm
CHANGES: 
1) endJobStream.csh, getFilesToProcess.csh, getFilesToProcess2.csh,
   logFileToProcess.csh, logFileToProcessByDir.csh, logMirroredFiles.csh,
   logProcessedFile.csh, startJobStream.csh, Install: Remove "-x" option

TAG: radardbutilities-5-1-4-2
TAG: radardbutilities-5-1-4-1
DATE: 07/01/2013
STAFF: lec
CHANGES: from scrum-dog/Sybase 15 testing
- changed "-f -x" to "-fx" for solaris/linux
this command will work for both platforms

TAG: radardbutilities-4-4-1-2
DATE: 01/04/2012
STAFF: dbm
CHANGES: 
1) Added "-f" option to csh startup in config file

TAG: radardbutilities-4-4-1-1
DATE: 05/24/2011
STAFF: sc
CHANGES: 
1) logFileToProcessByDir.csh - fixed bug whereby only one file in the directory
   was ever getting processed.

TAG: radardbutilities-4-3-3-1
DATE: 03/11/2010
STAFF: dbm
CHANGES: merge tr10086 branch to trunk

TAG: radardbutilities-tr10086-1
DATE: 02/19/2010
STAFF: dbm
CHANGES:
1) Changed the following scripts so they source the radardbutilites config
   file instead of the radardbschema config file:
       startJobStream.csh, endJobStream.csh, getFilesToProcess.csh,
       getFilesToProcess2.csh, logFileToProcess.csh,
       logFileToProcessByDir.csh, logMirroredFiles.csh, logProcessedFile.csh
2) Changed the following scripts so they no longer expect the radar DB schema
   product as an argument:
       startJobStream.csh, endJobStream.csh

TAG: radardbutilities-tr10086-BP
DATE: 02/18/2010
STAFF: dbm
CHANGES:
1) branch point tag for TR10086

TAG: radardbutilities-4-3-0-1
DATE: 07/09/2009
STAFF: sc
CHANGES: merge tr9451 branch to trunk

TAG: radardbutilities-tr9451-5
DATE: 03/09/2009
STAFF: sc
CHANGES:
1) logFileToProcess.py added checking for empty files i.e.
   don't log empty files

TAG: radardbutilities-tr9451-4
DATE: 03/06/2009
STAFF: sc
CHANGES:
1) logFileToProcess.py removed the sql and print of files logged on current date